[gd_scene load_steps=6 format=3 uid="uid://bckcmwn6qmafx"]

[ext_resource type="Script" path="res://script/object/interactive/level/darkener.gd" id="1_2o80p"]
[ext_resource type="Shader" path="res://shader/spatial/psx_unlit_sprite.gdshader" id="2_i6rqe"]
[ext_resource type="Texture2D" uid="uid://xj3h3m7xe531" path="res://asset/2d/sprite/player/guardian.png" id="3_s7kgq"]


[sub_resource type="BoxShape3D" id="BoxShape3D_tl287"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j67b8"]
render_priority = 0
shader = ExtResource("2_i6rqe")
shader_parameter/use_fog = true
shader_parameter/modulate_color = Color(0.756863, 0, 0.780392, 1)
shader_parameter/billboard = true
shader_parameter/y_billboard = false
shader_parameter/animate = null
shader_parameter/animation_frames = null
shader_parameter/animation_speed = null
shader_parameter/alpha_color = Color(1, 0, 1, 1)
shader_parameter/albedoTex = ExtResource("3_s7kgq")

[node name="Darkener" type="Marker3D"]
script = ExtResource("1_2o80p")

[node name="DarkenerArea" type="Area3D" parent="."]

[node name="DarkenerCollision" type="CollisionShape3D" parent="DarkenerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_tl287")

[node name="DarkenerSprite" type="Sprite3D" parent="."]
material_override = SubResource("ShaderMaterial_j67b8")
offset = Vector2(0, 32)
pixel_size = 0.03
texture = ExtResource("3_s7kgq")
hframes = 5
vframes = 5

[connection signal="body_entered" from="DarkenerArea" to="." method="_on_darkener_area_body_entered"]
[connection signal="body_exited" from="DarkenerArea" to="." method="_on_darkener_area_body_exited"]
